# stringutils

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/snap/: SampleHeader.hpp  string.hpp
include/util/: string.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  SampleTest.cpp  StringTest.cpp  WStringTest.cpp
